fixed server skills bar length on iPhone Plus models and s8+

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -687,3 +687,13 @@ pre code {
  padding-left: 0px;
  }
 }
+
+@media only screen (min width: 600px) and (max width: 800px) {
+
+ .server {
+ width: 79%;
+ }
+
+}
+
+
